--- a/index.html
+++ b/index.html
@@ -58,5 +58,51 @@
         </div>
     </div>
    </section> 
+   <section id="pricing">
+    <div class="container">
+        <h2 class="title">Pricing options</h2>
+        <div class="pricing__line"></div>
+        <div class="pricing__text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        </div>
+        <div class="pricing__wrap">
+            <ul class="list">
+                <li class="list__tariff">Basic</li>
+                <li class="list__cost">$10</li>
+                <li class="list__free">Free for life</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+            </ul>
+            <ul class="list">
+                <li class="list__tariff">Optima</li>
+                <li class="list__cost">$20</li>
+                <li class="list__free">Free for life</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+            </ul>
+            <ul class="list">
+                <li class="list__tariff">Pro</li>
+                <li class="list__cost">$30</li>
+                <li class="list__free">Free for life</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+                <li class="list__gb">1 gb of space</li>
+            </ul>
+        </div>
+        
+    </div>
+
+   </section>
 </body>
 </html>
