--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
    <section id="advantages">
     <div class="container">
         <h2 class="title">Why this is awesome</h2>
-        <div class="advantages__line"></div>
         <div class="advantages__text">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         </div>
@@ -61,7 +60,6 @@
    <section id="pricing">
     <div class="container">
         <h2 class="title">Pricing options</h2>
-        <div class="pricing__line"></div>
         <div class="pricing__text">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         </div>
@@ -107,7 +105,6 @@
    <section id="customers">
     <div class="container">
         <h2 class="title">what our customers are saying</h2>
-        <div class="customers__line"></div>
         <div class="customers__text">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         </div>
@@ -143,8 +140,11 @@
                         <p>Lorem ipsum dolor sit amet, 
                             consectetur adipisicing elit. Doloribus 
                             accusamus expedita repellat similique 
-                            odio aspernatur ex, architecto eaque 
-                            quo suscipit.</p>
+                            odio asex, architecto eaque 
+                            quo suscipitp consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique 
+                            odio asex, architecto eaque 
+                            quo suscipitp</p>
                     </div>
                     <div class="feedback__card">
                         <div class="feedback__img">
@@ -165,11 +165,8 @@
               <div class="feedback">
                 <div class="feedback__content">
                     <div class="feedback__text">
-                        <p>Lorem ipsum dolor sit amet, 
-                            consectetur adipisicing elit. Doloribus 
-                            accusamus expedita repellat similique 
-                            odio aspernatur ex, architecto eaque 
-                            quo suscipit.</p>
+                        <p>Lorem ipsum dolor sit amet 
+                            .</p>
                     </div>
                     <div class="feedback__card">
                         <div class="feedback__img">
@@ -191,6 +188,19 @@
 
     </div>
 
+   </section>
+   <section id="axure">
+    <div class="container_axure">
+        <h2 class="titleW">STYLISH AXURE DESIGN</h2>
+        <div class="axure__text">
+            <p>Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+        </div>
+        <div class="button">
+            <a href="https://ru.bem.info/methodology/quick-start/">Download</a>
+            
+        </div>
+
+    </div>
    </section>
 </body>
 </html>
